[gd_scene load_steps=29 format=2]

[ext_resource path="res://scenes/levels/test_grid.tscn" type="PackedScene" id=1]
[ext_resource path="res://scenes/props/grid.tscn" type="PackedScene" id=2]
[ext_resource path="res://scenes/entities/fungus.tscn" type="PackedScene" id=3]
[ext_resource path="res://scenes/entities/control_camera.tscn" type="PackedScene" id=4]
[ext_resource path="res://src/props/grid_editor.gd" type="Script" id=5]
[ext_resource path="res://scenes/ui/tactical_ui.tscn" type="PackedScene" id=6]
[ext_resource path="res://src/states/game/player_turn.gd" type="Script" id=7]
[ext_resource path="res://src/states/game/nature_turn.gd" type="Script" id=8]
[ext_resource path="res://scenes/world_env.tres" type="Environment" id=9]
[ext_resource path="res://src/states/state_machine.gd" type="Script" id=10]
[ext_resource path="res://src/states/game/ai_turn.gd" type="Script" id=11]
[ext_resource path="res://scenes/entities/ai.tscn" type="PackedScene" id=12]
[ext_resource path="res://src/entities/player.gd" type="Script" id=13]
[ext_resource path="res://scenes/ui/next_turn_buttons.tscn" type="PackedScene" id=14]
[ext_resource path="res://src/entities/game_over.gd" type="Script" id=15]
[ext_resource path="res://scenes/props/beach.tscn" type="PackedScene" id=16]
[ext_resource path="res://scenes/props/water.tscn" type="PackedScene" id=17]
[ext_resource path="res://src/main_level.gd" type="Script" id=18]
[ext_resource path="res://scenes/ui/pause_menu.tscn" type="PackedScene" id=19]
[ext_resource path="res://src/WorldEnvironment.gd" type="Script" id=20]
[ext_resource path="res://src/entities/DirectionalLight.gd" type="Script" id=21]
[ext_resource path="res://assets/sound/sfx/game_win.mp3" type="AudioStream" id=22]
[ext_resource path="res://assets/sound/sfx/game_lose.mp3" type="AudioStream" id=23]
[ext_resource path="res://src/ui/mobile_joystick.gd" type="Script" id=24]
[ext_resource path="res://assets/textures/joystick_paddle.png" type="Texture" id=25]
[ext_resource path="res://assets/textures/joystick.png" type="Texture" id=26]
[ext_resource path="res://scenes/ui/theme.tres" type="Theme" id=27]

[sub_resource type="CircleShape2D" id=1]
radius = 64.0

[node name="main_level" type="Spatial"]
script = ExtResource( 18 )

[node name="state_machine" type="Node" parent="."]
script = ExtResource( 10 )

[node name="player_turn" type="Node" parent="state_machine"]
script = ExtResource( 7 )

[node name="ai_turn" type="Node" parent="state_machine"]
script = ExtResource( 11 )

[node name="nature_turn" type="Node" parent="state_machine"]
script = ExtResource( 8 )

[node name="grid" parent="." instance=ExtResource( 2 )]

[node name="water" parent="." instance=ExtResource( 17 )]

[node name="beach" parent="." instance=ExtResource( 16 )]

[node name="Test_Grid" parent="." instance=ExtResource( 1 )]
script = ExtResource( 5 )
show_tiles_in_editor = true

[node name="Control_Camera" parent="." instance=ExtResource( 4 )]
transform = Transform( 1, 0, 0, 0, 0.642788, 0.766044, 0, -0.766044, 0.642788, 5, 5, 10 )
current = false

[node name="CanvasLayer" type="CanvasLayer" parent="."]
script = ExtResource( 15 )

[node name="tactical_ui" parent="CanvasLayer" instance=ExtResource( 6 )]

[node name="next_turn_buttons" parent="CanvasLayer" instance=ExtResource( 14 )]
anchor_left = 0.7
anchor_top = 0.1
anchor_right = 0.8
anchor_bottom = 0.1
margin_left = 0.0
margin_top = 0.0
margin_right = 0.0
margin_bottom = 0.0

[node name="pause_menu" parent="CanvasLayer" instance=ExtResource( 19 )]
visible = false

[node name="win_sound" type="AudioStreamPlayer" parent="CanvasLayer"]
stream = ExtResource( 22 )
volume_db = -5.0

[node name="lose_sound" type="AudioStreamPlayer" parent="CanvasLayer"]
stream = ExtResource( 23 )

[node name="Menu_Button" type="Control" parent="CanvasLayer"]
anchor_left = 0.015
anchor_top = 0.015
anchor_right = 0.015
anchor_bottom = 0.015
margin_right = 40.0
margin_bottom = 40.0
mouse_filter = 2
theme = ExtResource( 27 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="menu_butt" type="Button" parent="CanvasLayer/Menu_Button"]
margin_right = 12.0
margin_bottom = 20.0
focus_mode = 0
enabled_focus_mode = 0
text = "Menu"

[node name="left_mobile_joystick" type="CanvasLayer" parent="."]
script = ExtResource( 24 )

[node name="Control" type="Control" parent="left_mobile_joystick"]
visible = false
anchor_left = 0.1
anchor_top = 0.75
anchor_right = 0.1
anchor_bottom = 0.75
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TouchScreenButton" type="TouchScreenButton" parent="left_mobile_joystick/Control"]
normal = ExtResource( 26 )
shape = SubResource( 1 )

[node name="paddle" type="Sprite" parent="left_mobile_joystick"]
visible = false
position = Vector2( 64, 64 )
texture = ExtResource( 25 )

[node name="right_mobile_joystick" type="CanvasLayer" parent="."]
script = ExtResource( 24 )

[node name="Control" type="Control" parent="right_mobile_joystick"]
visible = false
anchor_left = 0.78
anchor_top = 0.75
anchor_right = 0.8
anchor_bottom = 0.75
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TouchScreenButton" type="TouchScreenButton" parent="right_mobile_joystick/Control"]
normal = ExtResource( 26 )
shape = SubResource( 1 )

[node name="paddle" type="Sprite" parent="right_mobile_joystick"]
visible = false
position = Vector2( 64, 64 )
texture = ExtResource( 25 )

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = ExtResource( 9 )
script = ExtResource( 20 )

[node name="DirectionalLight" type="DirectionalLight" parent="WorldEnvironment"]
transform = Transform( 0.34202, -0.538986, 0.769751, 7.16125e-08, 0.819152, 0.573577, -0.939693, -0.196175, 0.280166, 228.275, 154.801, 48.0567 )
light_energy = 2.0
shadow_enabled = true
script = ExtResource( 21 )

[node name="ai" parent="." instance=ExtResource( 12 )]

[node name="player" type="Spatial" parent="." groups=[
"player",
]]
script = ExtResource( 13 )

[node name="fungus" parent="player" instance=ExtResource( 3 )]

[connection signal="pressed" from="CanvasLayer/Menu_Button/menu_butt" to="." method="_on_menu_butt_pressed"]

[editable path="Test_Grid"]
